--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -6,12 +6,32 @@ parameters:
 			path: src/EntityDefinition.php
 
 		-
+			message: "#^Method Ergebnis\\\\FactoryBot\\\\FieldDefinition\\:\\:references\\(\\) has parameter \\$count with a nullable type declaration\\.$#"
+			count: 1
+			path: src/FieldDefinition.php
+
+		-
+			message: "#^Method Ergebnis\\\\FactoryBot\\\\FieldDefinition\\:\\:references\\(\\) has parameter \\$count with null as default value\\.$#"
+			count: 1
+			path: src/FieldDefinition.php
+
+		-
 			message: "#^Method Ergebnis\\\\FactoryBot\\\\FixtureFactory\\:\\:define\\(\\) has parameter \\$afterCreate with a nullable type declaration\\.$#"
 			count: 1
 			path: src/FixtureFactory.php
 
 		-
 			message: "#^Method Ergebnis\\\\FactoryBot\\\\FixtureFactory\\:\\:define\\(\\) has parameter \\$afterCreate with null as default value\\.$#"
+			count: 1
+			path: src/FixtureFactory.php
+
+		-
+			message: "#^Method Ergebnis\\\\FactoryBot\\\\FixtureFactory\\:\\:createMultiple\\(\\) has parameter \\$count with a nullable type declaration\\.$#"
+			count: 1
+			path: src/FixtureFactory.php
+
+		-
+			message: "#^Method Ergebnis\\\\FactoryBot\\\\FixtureFactory\\:\\:createMultiple\\(\\) has parameter \\$count with null as default value\\.$#"
 			count: 1
 			path: src/FixtureFactory.php
 
