--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,19 +1,9 @@
 parameters:
 	ignoreErrors:
 		-
-			message: "#^Method Example\\\\Entity\\\\Organization\\:\\:id\\(\\) has a nullable return type declaration\\.$#"
+			message: "#^Method Example\\\\Entity\\\\Organization\\:\\:url\\(\\) has a nullable return type declaration\\.$#"
 			count: 1
 			path: example/src/Entity/Organization.php
-
-		-
-			message: "#^Method Example\\\\Entity\\\\Organization\\:\\:name\\(\\) has a nullable return type declaration\\.$#"
-			count: 1
-			path: example/src/Entity/Organization.php
-
-		-
-			message: "#^Method Example\\\\Entity\\\\Project\\:\\:id\\(\\) has a nullable return type declaration\\.$#"
-			count: 1
-			path: example/src/Entity/Project.php
 
 		-
 			message: "#^Constructor in Example\\\\Entity\\\\Repository has parameter \\$codeOfConduct with default value\\.$#"
@@ -46,11 +36,6 @@ parameters:
 			path: example/src/Entity/Repository.php
 
 		-
-			message: "#^Method Example\\\\Entity\\\\Repository\\:\\:id\\(\\) has a nullable return type declaration\\.$#"
-			count: 1
-			path: example/src/Entity/Repository.php
-
-		-
 			message: "#^Method Example\\\\Entity\\\\Repository\\:\\:template\\(\\) has a nullable return type declaration\\.$#"
 			count: 1
 			path: example/src/Entity/Repository.php
@@ -76,14 +61,14 @@ parameters:
 			path: example/src/Entity/User.php
 
 		-
-			message: "#^Method Example\\\\Entity\\\\User\\:\\:id\\(\\) has a nullable return type declaration\\.$#"
+			message: "#^Method Example\\\\Entity\\\\User\\:\\:location\\(\\) has a nullable return type declaration\\.$#"
 			count: 1
 			path: example/src/Entity/User.php
 
 		-
-			message: "#^Method Example\\\\Entity\\\\User\\:\\:location\\(\\) has a nullable return type declaration\\.$#"
+			message: "#^Parameter \\#1 \\$argument of class ReflectionClass constructor expects class\\-string\\<T of object\\>\\|T of object, string given\\.$#"
 			count: 1
-			path: example/src/Entity/User.php
+			path: example/test/AutoReview/FixtureTest.php
 
 		-
 			message: "#^Instanceof between Ergebnis\\\\FactoryBot\\\\FieldDefinition\\\\Resolvable and Ergebnis\\\\FactoryBot\\\\FieldDefinition\\\\Resolvable will always evaluate to true\\.$#"
