--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "ergebnis/factory-bot",
   "type": "library",
-  "description": "Provides an entity factory for doctrine/orm entities that can be used in tests.",
+  "description": "Provides a fixture factory for doctrine/orm entities.",
   "keywords": [
     "doctrine",
     "orm",
