--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "doctrine/annotations": "^1.7.0",
     "doctrine/collections": "^1.0.0",
     "doctrine/orm": "^2.6.3",
-    "ergebnis/classy": "~0.5.2",
+    "ergebnis/classy": "^1.0.0",
     "fzaninotto/faker": "^1.9.1"
   },
   "require-dev": {
@@ -30,7 +30,7 @@
     "ergebnis/license": "~1.0.0",
     "ergebnis/php-cs-fixer-config": "^2.2.1",
     "ergebnis/phpstan-rules": "~0.15.0",
-    "ergebnis/test-util": "~0.9.1",
+    "ergebnis/test-util": "^1.0.0",
     "infection/infection": "~0.15.3",
     "jangregor/phpstan-prophecy": "~0.8.0",
     "phpstan/extension-installer": "^1.0.4",
