--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
   },
   "require-dev": {
     "ergebnis/composer-normalize": "^2.6.1",
-    "ergebnis/license": "~1.0.0",
+    "ergebnis/license": "^1.0.0",
     "ergebnis/php-cs-fixer-config": "^2.2.1",
     "ergebnis/phpstan-rules": "~0.15.0",
     "ergebnis/test-util": "^1.0.0",
