--- a/.gitattributes
+++ b/.gitattributes
@@ -1,16 +1,17 @@
-/.github/               export-ignore
-/config/                export-ignore
-/example/               export-ignore
-/test/                  export-ignore
-/tools/                 export-ignore
-/.editorconfig          export-ignore
-/.gitattributes         export-ignore
-/.gitignore             export-ignore
-/.php_cs                export-ignore
-/infection.json         export-ignore
-/Makefile               export-ignore
-/phive.xml              export-ignore
-/phpstan-baseline.neon  export-ignore
-/phpstan.neon           export-ignore
-/psalm-baseline.xml     export-ignore
-/psalm.xml              export-ignore
+/.github/                       export-ignore
+/config/                        export-ignore
+/example/                       export-ignore
+/test/                          export-ignore
+/tools/                         export-ignore
+/.editorconfig                  export-ignore
+/.gitattributes                 export-ignore
+/.gitignore                     export-ignore
+/.php_cs                        export-ignore
+/composer-require-checker.json  export-ignore
+/infection.json                 export-ignore
+/Makefile                       export-ignore
+/phive.xml                      export-ignore
+/phpstan-baseline.neon          export-ignore
+/phpstan.neon                   export-ignore
+/psalm-baseline.xml             export-ignore
+/psalm.xml                      export-ignore
