Allow field definitions to be overridden when using reference.

--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -76,6 +76,16 @@ parameters:
 			path: src/EntityDefinition.php
 
 		-
+			message: "#^Constructor in Ergebnis\\\\FactoryBot\\\\FieldDefinition\\\\Reference has parameter \\$fieldDefinitionOverrides with default value\\.$#"
+			count: 1
+			path: src/FieldDefinition/Reference.php
+
+		-
+			message: "#^Constructor in Ergebnis\\\\FactoryBot\\\\FieldDefinition\\\\References has parameter \\$fieldDefinitionOverrides with default value\\.$#"
+			count: 1
+			path: src/FieldDefinition/References.php
+
+		-
 			message: "#^Dead catch \\- ReflectionException is never thrown in the try block\\.$#"
 			count: 1
 			path: src/FixtureFactory.php
@@ -352,12 +362,12 @@ parameters:
 
 		-
 			message: "#^Call to static method PHPUnit\\\\Framework\\\\Assert\\:\\:assertInstanceOf\\(\\) with 'Example\\\\\\\\Entity\\\\\\\\User' and Example\\\\Entity\\\\User will always evaluate to true\\.$#"
-			count: 1
+			count: 2
 			path: test/Unit/FieldDefinition/ReferenceTest.php
 
 		-
 			message: "#^Call to static method PHPUnit\\\\Framework\\\\Assert\\:\\:assertIsArray\\(\\) with array\\<int, Example\\\\Entity\\\\User\\> will always evaluate to true\\.$#"
-			count: 1
+			count: 2
 			path: test/Unit/FieldDefinition/ReferencesTest.php
 
 		-
