--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,14 @@
     "doctrine/collections": "^1.0.0",
     "doctrine/orm": "^2.6.3",
     "ergebnis/classy": "^1.1.0",
-    "fzaninotto/faker": "^1.9.1"
+    "fakerphp/faker": "^1.11.0"
   },
   "require-dev": {
     "ergebnis/composer-normalize": "^2.9.0",
     "ergebnis/license": "^1.1.0",
     "ergebnis/php-cs-fixer-config": "^2.5.3",
     "ergebnis/phpstan-rules": "~0.15.3",
-    "ergebnis/test-util": "^1.3.0",
+    "ergebnis/test-util": "^1.3.1",
     "infection/infection": "~0.15.3",
     "jangregor/phpstan-prophecy": "~0.8.1",
     "phpstan/extension-installer": "^1.0.5",
