--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     }
   ],
   "require": {
-    "php": "^7.3",
+    "php": "^7.3 || ^8.0",
     "doctrine/annotations": "^1.10.3",
     "doctrine/collections": "^1.6.5",
     "doctrine/dbal": "^2.12.0 || ^3.0.0",
