--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "php": "^7.3",
     "doctrine/annotations": "^1.10.3",
     "doctrine/collections": "^1.6.5",
+    "doctrine/dbal": "^2.12.0 || ^3.0.0",
     "doctrine/orm": "^2.8.0",
     "ergebnis/classy": "^1.1.0",
     "fakerphp/faker": "^1.11.0"
