--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -9,7 +9,6 @@ on: # yamllint disable-line rule:truthy
       - "main"
 
 env:
-  ERGEBNIS_BOT_NAME: "ergebnis-bot"
   PHP_EXTENSIONS: "mbstring"
 
 jobs:
@@ -89,7 +88,7 @@ jobs:
     strategy:
       matrix:
         php-version:
-          - "7.4"
+          - "7.3"
 
         dependencies:
           - "locked"
@@ -131,7 +130,7 @@ jobs:
     strategy:
       matrix:
         php-version:
-          - "7.4"
+          - "7.3"
 
         dependencies:
           - "locked"
@@ -263,7 +262,7 @@ jobs:
     strategy:
       matrix:
         php-version:
-          - "7.4"
+          - "7.3"
 
         dependencies:
           - "locked"
@@ -313,7 +312,7 @@ jobs:
     strategy:
       matrix:
         php-version:
-          - "7.4"
+          - "7.3"
 
         dependencies:
           - "locked"
@@ -369,12 +368,11 @@ jobs:
       ) && (
         (github.actor == 'dependabot[bot]' && startsWith(github.event.pull_request.title, 'composer(deps-dev)')) ||
         (github.actor == 'dependabot[bot]' && startsWith(github.event.pull_request.title, 'github-actions(deps)')) ||
-        (github.actor == 'ergebnis-bot' && github.event.pull_request.title == 'Enhancement: Update license year') ||
         (github.actor == 'localheinz' && contains(github.event.pull_request.labels.*.name, 'merge'))
       )
 
     steps:
-      - name: "Request review from @${{ env.ERGEBNIS_BOT_NAME }}"
+      - name: "Request review from @ergebnis-bot"
         uses: "actions/github-script@v3.1"
         with:
           github-token: "${{ secrets.ERGEBNIS_BOT_TOKEN }}"
@@ -383,7 +381,7 @@ jobs:
             const repository = context.repo
 
             const reviewers = [
-              "${{ env.ERGEBNIS_BOT_NAME }}",
+              "ergebnis-bot",
             ]
 
             await github.pulls.requestReviewers({
@@ -393,7 +391,7 @@ jobs:
               reviewers: reviewers,
             })
 
-      - name: "Assign @${{ env.ERGEBNIS_BOT_NAME }}"
+      - name: "Assign @ergebnis-bot"
         uses: "actions/github-script@v3.1"
         with:
           github-token: "${{ secrets.ERGEBNIS_BOT_TOKEN }}"
@@ -402,7 +400,7 @@ jobs:
             const repository = context.repo
 
             const assignees = [
-              "${{ env.ERGEBNIS_BOT_NAME }}",
+              "ergebnis-bot",
             ]
 
             await github.issues.addAssignees({
@@ -414,7 +412,6 @@ jobs:
 
       - name: "Approve pull request"
         uses: "actions/github-script@v3.1"
-        if: "github.actor != '${{ env.ERGEBNIS_BOT_NAME }}'"
         with:
           github-token: "${{ secrets.ERGEBNIS_BOT_TOKEN }}"
           script: |
