--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
     "phpunit/phpunit": "~9.2.6",
     "psalm/plugin-phpunit": "~0.15.0",
     "ramsey/uuid": "^4.1.1",
+    "symfony/cache": "^5.3.4",
     "vimeo/psalm": "^4.6.4"
   },
   "config": {
