Enhancement: Update phpstan/phpstan and friends

--- a/composer.json
+++ b/composer.json
@@ -30,15 +30,15 @@
     "ergebnis/composer-normalize": "^2.15.0",
     "ergebnis/license": "^1.1.0",
     "ergebnis/php-cs-fixer-config": "^2.14.0",
-    "ergebnis/phpstan-rules": "~0.15.3",
+    "ergebnis/phpstan-rules": "^1.0.0",
     "ergebnis/test-util": "^1.5.0",
     "infection/infection": "~0.18.2",
     "phpstan/extension-installer": "^1.1.0",
-    "phpstan/phpstan": "~0.12.99",
-    "phpstan/phpstan-deprecation-rules": "~0.12.6",
-    "phpstan/phpstan-doctrine": "~0.12.44",
-    "phpstan/phpstan-phpunit": "~0.12.22",
-    "phpstan/phpstan-strict-rules": "~0.12.11",
+    "phpstan/phpstan": "^1.1.1",
+    "phpstan/phpstan-deprecation-rules": "^1.0.0",
+    "phpstan/phpstan-doctrine": "^1.0.1",
+    "phpstan/phpstan-phpunit": "^1.0.0",
+    "phpstan/phpstan-strict-rules": "^1.0.0",
     "phpunit/phpunit": "~9.2.6",
     "psalm/plugin-phpunit": "~0.16.1",
     "ramsey/uuid": "^4.2.3",
