Fix: Allow composer plugins

--- a/composer.json
+++ b/composer.json
@@ -63,6 +63,11 @@
     }
   },
   "config": {
+    "allow-plugins": {
+      "ergebnis/composer-normalize": true,
+      "infection/extension-installer": true,
+      "phpstan/extension-installer": true
+    },
     "platform": {
       "php": "7.4.26"
     },
