Fix: Rename steps

--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: "Checkout"
         uses: "actions/checkout@v2.4.0"
 
-      - name: "Install PHP with extensions"
+      - name: "Set up PHP"
         uses: "shivammathur/setup-php@2.16.0"
         with:
           coverage: "xdebug"
@@ -86,7 +86,7 @@ jobs:
           file_or_dir: "."
           strict: true
 
-      - name: "Install PHP with extensions"
+      - name: "Set up PHP"
         uses: "shivammathur/setup-php@2.16.0"
         with:
           coverage: "none"
@@ -147,7 +147,7 @@ jobs:
       - name: "Checkout"
         uses: "actions/checkout@v2.4.0"
 
-      - name: "Install PHP with extensions"
+      - name: "Set up PHP"
         uses: "shivammathur/setup-php@2.16.0"
         with:
           coverage: "none"
@@ -189,7 +189,7 @@ jobs:
       - name: "Checkout"
         uses: "actions/checkout@v2.4.0"
 
-      - name: "Install PHP with extensions"
+      - name: "Set up PHP"
         uses: "shivammathur/setup-php@2.16.0"
         with:
           coverage: "xdebug"
@@ -231,7 +231,7 @@ jobs:
       - name: "Checkout"
         uses: "actions/checkout@v2.4.0"
 
-      - name: "Install PHP with extensions"
+      - name: "Set up PHP"
         uses: "shivammathur/setup-php@2.16.0"
         with:
           coverage: "none"
@@ -286,7 +286,7 @@ jobs:
       - name: "Checkout"
         uses: "actions/checkout@v2.4.0"
 
-      - name: "Install PHP with extensions"
+      - name: "Set up PHP"
         uses: "shivammathur/setup-php@2.16.0"
         with:
           coverage: "none"
