Fix: Do not let dependabot update doctrine/persistence

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -12,6 +12,7 @@ updates:
       - dependency-name: "doctrine/collections"
       - dependency-name: "doctrine/dbal"
       - dependency-name: "doctrine/orm"
+      - dependency-name: "doctrine/persistence"
       - dependency-name: "fakerphp/faker"
     labels:
       - "dependency"
