--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
     "fakerphp/faker": "^1.11.0"
   },
   "require-dev": {
+    "ext-pdo_sqlite": "*",
     "ergebnis/composer-normalize": "^2.24.0",
     "ergebnis/license": "^1.2.0",
     "ergebnis/php-cs-fixer-config": "^4.3.0",
