--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
   "require": {
     "php": "^7.4 || ^8.0",
     "doctrine/annotations": "^1.10.3",
-    "doctrine/collections": "^1.6.5",
+    "doctrine/collections": "^1.6.5 || ^2.0.0",
     "doctrine/dbal": "^2.12.0 || ^3.0.0",
     "doctrine/orm": "^2.8.0",
     "doctrine/persistence": "^2.1.0",
