--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -76,6 +76,11 @@ parameters:
 			path: src/EntityDefinition.php
 
 		-
+			message: "#^Strict comparison using \\!\\=\\= between array\\{\\} and array\\{\\} will always evaluate to false\\.$#"
+			count: 1
+			path: src/EntityDefinition.php
+
+		-
 			message: "#^Constructor in Ergebnis\\\\FactoryBot\\\\FieldDefinition\\\\Reference has parameter \\$fieldDefinitionOverrides with default value\\.$#"
 			count: 1
 			path: src/FieldDefinition/Reference.php
